<resources>
    <string name="app_name">Movie Database</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_details">Details</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_favorites">Favorites</string>
    <string name="data_provided_by">Data provided by</string>
    <string name="search_result_error_message">Unable to find any result for search criteria!</string>
    <string name="popular_result_error_message">Unable to load popular movies!!</string>
    <string name="latest_result_error_message">Unable to load latest movie!</string>
    <string name="top_rated_result_error_message">Unable to load top rated movies!!</string>
    <string name="favorites_result_error_message">Unable to load favorite movies!!</string>
    <string name="title_latest_movie">Latest Movie</string>
    <string name="movie_saved_success_message">The movie has been saved to favorites!</string>
</resources>