<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_top_rated"
        android:icon="@drawable/ic_top_rated_black_24"
        android:title="@string/title_top_rated" />

    <item
        android:id="@+id/navigation_popular"
        android:icon="@drawable/ic_whats_hot_black_24"
        android:title="@string/title_popular" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_black_24"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24"
        android:title="@string/title_search" />

</menu>
