<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <action android:id="@+id/action_movie_details"
        app:destination="@id/navigation_details" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bardur.moviedb.ui.screens.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.bardur.moviedb.ui.screens.popular.PopularFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bardur.moviedb.ui.screens.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_details"
        android:label="@string/title_details"
        android:name="com.bardur.moviedb.ui.screens.details.DetailsFragment"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="movie"
            app:argType="com.bardur.moviedb.data.Movie" />
    </fragment>
</navigation>
